# DoWADO-Web-Server

./: .gitignore  README.md  docker-compose.yml  enviroment.txt  enviroment.yml  pyproject.toml
example/: jwt.py
src/: email_example.py  main.py  send.py
src/api/: __init__.py
src/api/auth/: login_control.py  login_dao.py  login_dto.py  login_service.py
src/api/chat/: chat_constants.py  chat_control.py  chat_dao.py  chat_dto.py  chat_service.py  chat_utils.py
src/api/file/: file_control.py
src/api/mail/: mail_control.py  mail_dto.py  mail_service.py
src/api/report/: report_constnats.py  report_control.py  report_dao.py  report_dto.py  report_service.py  report_utils.py
src/api/user_students/: student_control.py  student_dao.py  student_dto.py  student_service.py
src/api/user_teachers/: teacher_control.py  teacher_dao.py  teacher_dto.py  teacher_service.py
src/api/v1/: __init__.py
src/api/v1/chat/: chat_control.py  chat_dao.py  chat_dto.py  chat_service.py  chatbot_constants.py  chatbot_control.py  chatbot_dao.py  chatbot_dto.py  chatbot_service.py  chatbot_utils.py
src/api/v1/chatbot/: chat_control.py  chatbot_control.py  chatbot_dao.py  chatbot_dto.py  chatbot_service.py  intoGPT.py
src/api/v1/example/: example_control.py  (+4 more)
src/config/: __init__.py  config.py  dto.py  security.py  status.py
src/core/: __init__.py  config.py  cors.py  error.py  event.py  router.py  status.py
src/database/: dto.py  model.py  models.py  session.py  test.json  tools.py
src/settings/: __init__.py  config.py  dto.py  index.py
src/utils/: use_model.py
(+31 files in other folders)
